--- a/Workbooks/Workflow_Feb24.Rmd
+++ b/Workbooks/Workflow_Feb24.Rmd
@@ -249,6 +249,27 @@ for (i in AB) {
 
 ```
 
+Some more visualization of expression values
+
+```{r}
+
+# summary heat map
+# use function plotmean
+
+length(unique(seu$RNA_snn_res.0.8))
+# there are 22 clusters
+
+cluster.num <- c(0:21)
+
+plotmean(plot_type = 'heatmap',seu = seu, group = 'RNA_snn_res.0.8', markers = AB, 
+                     var_names = cluster.num, slot = 'scale.data', xlab = "Cluster",
+         ylab = "Antibody")
+
+
+```
+
+
+
 
 
 ```{r}
@@ -264,12 +285,9 @@ Predict cell annotations with CAM (Corralations assignment method)
 
 reference_path <- "/Users/rhalenathomas/GITHUB/CelltypeR/Data/ReferenceMatrix9celltypesOrdered.csv"
 
-
-
-test_data <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/exp_clusters/df9000.csv") 
 reference_data <- read.csv(reference_path)
 
-cor <- find_correlation(test_data, 
+cor <- find_correlation(df.input, 
                              reference_data, 
                              min_corr = 0.5, 
                              min_diff = 0.05)
@@ -293,6 +311,7 @@ Apply correlation predictions to clusters and output a vector for annotation fun
 
 ```{r}
 
+
 # add the correlation predictions to the meta data
 seu <- AddMetaData(object=seu, metadata=cor$cell.label, col.name = 'cor.labels')
 # see the labels added
@@ -306,21 +325,30 @@ plot_lab_clust(seu, seu$RNA_snn_res.0.8, seu$cor.labels)
 
 
 
+
 ```
 
 Run get annotations function to return a vector of annotation in the order of the clusters.
 
 ```{r}
 
-
-cor.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.0.8, seu.label = seu$cor.labels, 
-               top_n = 3, ignore_unknown = TRUE, Label = "CAM")
+cor.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.0.8, 
+                          seu.label = seu$cor.labels, top_n = 3, 
+                          filter_out = c("Unknown","unknown","Mixed"), 
+                          Label = "CAM")
 cor.ann
+dim(cor.ann)
 
+cor.ann <- cor.ann[1:22,]
+dim(cor.ann)
 
-
+unique(cor.ann$CAM)
+length(cor.ann$CAM)
 
 ```
+
+
+
 
 
 Use a trained Random Forest model to predict cell types. 
@@ -351,9 +379,13 @@ Get the annotation by cluster for the RFM
 ```{r}
 
 rfm.ann <- get_annotation(seu, seu$RNA_snn_res.0.8,seu$rfm.labels, 
-               top_n = 3, filter_out = c("unknown","Unknown","Mixed"), Label = "RFM")
+               top_n = 3, filter_out = c("unknown","Unknown","Mixed","Mix"), Label = "RFM")
 rfm.ann
 
+#rfm.ann <- get_annotation(seu, seu$RNA_snn_res.0.8,seu$rfm.labels, 
+ #              top_n = 3, filter_out = FALSE, Label = "RFM")
+rfm.ann
+dim(rfm.ann)
 
 ```
 
@@ -370,7 +402,6 @@ plot_lab_clust(seu, seu.cluster = seu$RNA_snn_res.0.8, seu.labels = seu$rfm.labe
 
 
 Predicting cell types with Seurat label transfer using anchors
-
 
 
 ```{r}
@@ -419,9 +450,10 @@ Get a consensus of cluster annotations, Add the annotations to the seurat object
 # quick cheat just using the seurat labels to get a sting of annotations
 
 temp <- paste("'",as.character(seu.ann$Seurat), "'", collapse = ", ", sep = "" )
-my.ann <- c('Unknown', 'Radial Glia 1', 'Unknown', 'Mixed', 'Neurons 1', 'Radial Glia 3', 'Epithelial', 'Astrocytes mature', 'Endothelial', 'Astrocytes 1', 'Radial Glia 2', 'Neurons 1', 'NPC', 'Neurons 3', 'Epithelial', 'Neurons 1', 'Epithelial', 'Oligodendrocytes', 'Stem-like 1', 'Epithelial', 'NPC', 'Astrocytes mature', 'Oligodendrocytes', 'Stem-like 1')
-cluster.n <- c(0:23)
-man.ann <- data.frame(cluster.n, my.ann)
+
+my_ann <- c('Unknown', 'Radial Glia 1', 'Astrocytes 1', 'Mixed', 'Neurons 1', 'Neurons 2', 'Epithelial', 'Astrocytes mature', 'NPC', 'Radial Glia 2', 'Radial Glia 3', 'Endothelial', 'Epithelial', 'Neurons 3', 'Neurons 1', 'Astrocytes 2', 'Neurons 1', 'Unknown', 'Oligodendrocytes', 'Stem-like 1', 'Neural stem', 'Epithelial')
+cluster.n <- c(0:21)
+man.ann <- data.frame(cluster.n, my_ann)
 colnames(man.ann) <- c("Cluster","manual")
 
 # needs to be factors 
@@ -431,53 +463,216 @@ dim(man.ann)
 dim(cor.ann)
 dim(rfm.ann)
 dim(seu.ann)
-# function to take in dataframes of different predictions and a vector of manual annotation
-# only one is required
+
+# the dataframes must be the same length
 
 # the annotation function takes in a list of the annotation dataframes
 
-ann.list <- list(man.ann,cor.ann,rfm.ann,seu.ann)
+ann.list <- list(man.ann,df.cor.ann,rfm.ann,seu.ann)
 
 # annotate the seurat object
 
 seu <- cluster_annotate(seu, ann.list, 
-                        annotation_name ="CellType3", 
+                        annotation_name ="CellType", 
                         to_label = "RNA_snn_res.0.8")
+
+DimPlot(seu, group.by = "CellType")
 
 
 ```
+
+Just use the annotate functions
+
+```{r}
+
+seu <- annotate(seu, annotations = man.ann$manual, to_label = "RNA_snn_res.0.8", annotation_name = "MyCellType")
+
+DimPlot(seu, group.by = "MyCellType")
+
+```
+
+
+
+
 
 ```{r}
 #save with the annotations
 saveRDS(seu,"/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/seu9000Feb24.RDS")
 
-```
-
-
-
-
-```{r}
-DimPlot(seu)
 
 ```
-
-Save an annotated data object
-
-```{r}
-
-
-```
-
 
 
 Compare groups
 
+
 ```{r}
 
-seu <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/seu9000Feb15.RDS")
+seu <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/seu9000Feb24.RDS")
 
 
 ```
+
+
+Add the variables into the seurat object
+```{r}
+Genotype <- c("3450","3450","3450","AIW002","AIW002","AIW002","AJG001C","AJG001C","AJG001C")
+ExDate <- c("0306","0317","0317","0306","0317","0317","0306","0317","0317")
+Batch <- c("B","B","A","B","B","A","B","B","A")
+Age <- c("273","284","263","273","284","263","273","284","263")
+
+# Genotype
+Idents(seu) <- "Sample"
+cluster.ids <- Genotype
+# vector with the new names - you need this vector from me
+
+names(cluster.ids) <- levels(seu)    # get the levels
+seu <- RenameIdents(seu, cluster.ids) # rename  
+seu$Genotype <- Idents(seu)   # add a new dataslot
+
+# Experiment date
+Idents(seu) <- "Sample"
+cluster.ids <- ExDate
+# vector with the new names - you need this vector from me
+
+names(cluster.ids) <- levels(seu)    # get the levels
+seu <- RenameIdents(seu, cluster.ids) # rename  
+seu$ExDate <- Idents(seu)   # add a new dataslot
+
+# Batch
+Idents(seu) <- "Sample"
+cluster.ids <- Batch
+# vector with the new names - you need this vector from me
+
+names(cluster.ids) <- levels(seu)    # get the levels
+seu <- RenameIdents(seu, cluster.ids) # rename  
+seu$Batch <- Idents(seu)   # add a new dataslot
+
+# days in final differentiation media
+Idents(seu) <- "Sample"
+cluster.ids <- Age
+# vector with the new names - you need this vector from me
+
+names(cluster.ids) <- levels(seu)    # get the levels
+seu <- RenameIdents(seu, cluster.ids) # rename  
+seu$DaysinCulture <- Idents(seu)   # add a new dataslot
+
+
+
+```
+
+Plots some variables
+
+```{r}
+# one plot
+proportionplots(seu.q,seu.var = seu$Genotype, seu.lable = seu$CellType, groups = "Genotype")
+# add colours
+colours <- c("chocolate1","chocolate3","orange",
+                   "lightsalmon", "pink","lightpink3",
+                   "steelblue3","deepskyblue",
+                   "plum3","purple",
+                   "seagreen3","tomato4","burlywood3","grey90","brown",
+             "royalblue3", "tan4","yellowgreen")
+
+proportionplots(seu.q,seu.var = seu$Genotype, seu.lable = seu$CellType, groups = "Genotype", my_colours = colours)
+
+```
+
+```{r}
+var.list <- list(seu$DaysinCulture,seu$Batch,seu$ExDate,seu$Genotype)
+varnames <- c("Days in Culture", "Batch", "Experiment Date", "Genotype")
+# plot all the variables of interest at once
+
+plotproportions(seu, var.list = var.list, xgroup = seu$CellType, varnames = varnames, my_colours = c("blue","red"))
+
+
+
+
+```
+
+
+Heatmaps
+
+```{r}
+
+# make sure the order is correct
+celltypes <- c("unknown","radial glia 1", "astrocytes 1", "mixed","neurons 1",
+               "neurons 2", "epithelial", "astrocytes mature", "npc", "radial glia 2",
+               "radial glia 3", "endothelial","neurons 3", "astrocytes 2",
+               "oligodendrocytes", "stem-like 1","neural stem")
+
+plotmean(plot_type = 'heatmap',seu = seu, group = 'CellType', markers = AB, 
+                     var_names = celltypes, slot = 'scale.data', xlab = "Cell Type",
+         ylab = "Antibody")
+
+
+```
+```{r}
+# dot plot
+
+og.order <- c("unknown","radial glia 1", "astrocytes 1", "mixed","neurons 1",
+               "neurons 2", "epithelial", "astrocytes mature", "npc", "radial glia 2",
+               "radial glia 3", "endothelial","neurons 3", "astrocytes 2",
+               "oligodendrocytes", "stem-like 1","neural stem")
+
+# make sure the terms are exactly the same and you don't miss any
+new.order <- c("astrocytes 1","astrocytes 2","astrocytes mature",
+               "endothelial","epithelial", "mixed","neurons 1",
+               "neurons 2","neurons 3","neural stem","npc",
+               "oligodendrocytes",
+               "radial glia 1","radial glia 2","radial glia 3","stem-like 1",
+               "unknown")
+new.order <- rev(new.order)
+
+AB.order <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
+
+plotmean(plot_type = 'dotplot',seu = seu, group = 'CellType', markers = AB, 
+                     var_names = celltypes, slot = 'scale.data', xlab = "Cell Type",
+         ylab = "Antibody", var1order = new.order, var2order = AB.order)
+
+
+```
+
+Statistics comparing groups
+
+
+```{r}
+
+# prepare a dataframe for stats
+# this function takes the annotated seurat object with all the variables already existing as metadata slots
+
+# check what meta data slots exist in your object
+colnames(seu@meta.data)
+
+
+
+```
+
+
+```{r}
+# run the function
+
+var.names <- c("DaysinCulture", "Batch", "ExDate", "Genotype", "CellType")
+
+df.for.stats <- Prep_for_stats(seu, marker_list = AB, variables = var.names, 
+                               marker_name = 'Marker')
+
+
+# save the csv for later
+write.csv(df.for.stats, "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/testingLibrary/df4statsFeb26.csv")
+
+head(df.for.stats)
+
+
+```
+
+
+
+
+
+
+
+
 
 
 
